[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-td-russ-tutorial"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "pb-413", email = "pbyers413@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pygame-ce",
]

[project.urls]
Documentation = "https://github.com/pb-413/py-td-russ-tutorial#readme"
Issues = "https://github.com/pb-413/py-td-russ-tutorial/issues"
Source = "https://github.com/pb-413/py-td-russ-tutorial"

[tool.hatch.version]
path = "src/py_td_russ_tutorial/__about__.py"
